# DeepReSearch

./: .dockerignore  .gitignore  README.md  agent.py  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml  streamlit_app.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
clients/: research_client.py
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
src/ai/analyze/: query_analyze.py
src/ai/reflect/: prompt.py  reflect_search_result.py
src/ai/schedule/: plan_reserch.py
src/ai/search/: prompt.py
src/analyze/: prompt.py  query_analyze.py
src/api/: main.py  schemas.py  workflow.py
src/backend/: __init__.py  agent.py
src/backend/ai/reflect/: reflect_search_result.py
src/backend/ai/schedule/: plan_reserch.py  prompt.py
src/backend/ai/search/: deep_research.py  prompt.py  schema.py
src/backend/api/: main.py  workflow.py
src/backend/api/workflow/: __init__.py  constants.py  errors.py  models.py  service.py
src/backend/tools/: get_current_date.py  search_reflect.py  web_research.py
src/frontend/: .env.example  package-lock.json  package.json
src/frontend/src/: env.ts
src/frontend/src/app/: globals.css  layout.tsx  page.tsx  types.ts
src/frontend/src/lib/: api-client.ts  ws-client.ts
src/schedule/: plan_reserch.py  prompt.py
src/tools/: search_reflect.py
tests/: conftest.py
tests/backend/: test_agent.py  test_workflow_service.py
tests/backend/api/: test_main.py  test_schemas.py
tests/backend/tools/: test_get_current_date.py  test_search_reflect.py  test_web_research.py
(+22 files in other folders)
