[project]
name = "deepresearch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.121.0",
    "langchain-core>=1.0.0",
    "langchain-openai>=1.0.1",
    "langchain-tavily>=0.2.13",
    "langgraph>=1.0.1",
    "nest-asyncio>=1.6.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "streamlit>=1.51.0",
    "uvicorn[standard]>=0.38.0",
    "websockets>=15.0.1",
]
